float_eq/tests/derive_tests/assert_float_eq_all/assert_float_eq_all_generic.stderr
error: This trait does not yet support derive for generic types.
  --> $DIR/assert_float_eq_all_generic.rs:10:5
   |
10 |     FloatEqUlpsTol,
   |     ^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FloatEqUlpsTol` (in Nightly builds, run with -Z macro-backtrace for more info)

error: This trait does not yet support derive for generic types.
  --> $DIR/assert_float_eq_all_generic.rs:11:5
   |
11 |     FloatEq,
   |     ^^^^^^^
   |
   = note: this error originates in the derive macro `FloatEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: This trait does not yet support derive for generic types.
  --> $DIR/assert_float_eq_all_generic.rs:12:5
   |
12 |     FloatEqDebugUlpsDiff,
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FloatEqDebugUlpsDiff` (in Nightly builds, run with -Z macro-backtrace for more info)

error: This trait does not yet support derive for generic types.
  --> $DIR/assert_float_eq_all_generic.rs:13:5
   |
13 |     AssertFloatEq,
   |     ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `AssertFloatEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: This trait does not yet support derive for generic types.
  --> $DIR/assert_float_eq_all_generic.rs:14:5
   |
14 |     FloatEqAll,
   |     ^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FloatEqAll` (in Nightly builds, run with -Z macro-backtrace for more info)

error: This trait does not yet support derive for generic types.
  --> $DIR/assert_float_eq_all_generic.rs:15:5
   |
15 |     AssertFloatEqAll,
   |     ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `AssertFloatEqAll` (in Nightly builds, run with -Z macro-backtrace for more info)
